--- a/core/mcp_server/requirements.txt
+++ b/core/mcp_server/requirements.txt
@@ -15,7 +15,7 @@ sentence-transformers>=2.2.0
 transformers>=4.30.0
 
 # Async support
-asyncio>=3.4.3
+
 aiofiles>=23.0.0
 
 # Monitoring
@@ -25,4 +25,4 @@ prometheus-client>=0.16.0
 pytest>=7.0.0
 pytest-asyncio>=0.21.0
 black>=23.0.0
-mypy>=1.0.0
+# Development (move to requirements-dev.txt or [tool.poetry.group.dev])
