Reorganize experiments directory structure
- Move theory and methodology docs from experiments to main docs
- Create experiments/datasets/ for shared experimental datasets
- Add experiment_template with standard structure
- Update documentation to reflect new organization
- Add .gitignore patterns for experiment outputs
- Clear separation between infrastructure and experiments

--- a/.gitignore
+++ b/.gitignore
@@ -354,5 +354,14 @@ vgcore.*
 *.tfrecord
 *.tfrecords
 
+# Experiment outputs
+experiments/*/results/
+experiments/*/output/
+experiments/*/logs/
+experiments/*/.cache/
+experiments/*/checkpoints/
+experiments/*/*.checkpoint
+
 Acheron/
+Acheron/*
 logs/
