Address CodeRabbit review: Add Apache 2.0 license, remove logs, fix paths
- Add Apache 2.0 LICENSE file
- Update pyproject.toml with license field
- Remove accidentally committed log files from repository
- Remove poetry.lock from .gitignore for reproducible builds
- Fix import paths after directory restructure (arxiv -> tools.arxiv)
- Fix MCP server config paths to use correct directory structure
- Update all paths in core/mcp_server/CLAUDE.md documentation

--- a/.gitignore
+++ b/.gitignore
@@ -87,7 +87,7 @@ ipython_config.py
 Pipfile.lock
 
 # poetry
-poetry.lock
+# poetry.lock should be tracked for reproducible builds
 
 # pdm
 .pdm.toml
