--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ tenacity = "^9.1.2"
 ray = "^2.48.0"
 peft = "^0.17.0"
 structlog = "^25.4.0"
+pymupdf = "^1.26.4"
 
 [tool.poetry.group.dev.dependencies]
 mypy = "^1.5.0"
