feat: Enhance ArXiv paper collection and processing scripts
- Update `.gitignore` to include new data files for extended collections.
- Modify `collect_ai_papers_extended.py` to allow dynamic target count for paper collection.
- Implement `run_pipeline_from_list.py` to process papers from a specified list.
- Add `run_test_pipeline.py` for configurable testing of the ArXiv pipeline.

--- a/.gitignore
+++ b/.gitignore
@@ -366,3 +366,5 @@ Acheron/
 Acheron/*
 logs/
 tests/*
+tools/arxiv/scripts/data/arxiv_collections/arxiv_ids_extended_20250829_190526.txt
+tools/arxiv/scripts/data/arxiv_collections/arxiv_extended_collection_20250829_190526.json
