fix: Remove embedding files from git and update .gitignore
- Remove previously committed *_embeddings.json files from git tracking
- Add pattern to .gitignore to prevent future embedding files from being committed
- These are large generated files that should not be in version control

--- a/.gitignore
+++ b/.gitignore
@@ -362,6 +362,7 @@ experiments/*/logs/
 experiments/*/.cache/
 experiments/*/checkpoints/
 experiments/*/*.checkpoint
+experiments/*/embeddings/*_embeddings.json
 
 Acheron/
 Acheron/*
