fix: Remove result files from git and update .gitignore
- Remove all JSON result files that were accidentally tracked
- Remove extracted papers and analysis files
- Update .gitignore to prevent these files from being added
- These are generated output files that should not be in version control

--- a/.gitignore
+++ b/.gitignore
@@ -367,10 +367,19 @@ experiments/*/embeddings/*_embeddings.json
 Acheron/
 Acheron/*
 logs/
+experiments/word2vec_evolution/embeddings/
+experiments/word2vec_evolution/extracted_papers/
+experiments/word2vec_evolution/*_results.json
+experiments/word2vec_evolution/*_analysis.json
+# Test artifacts only, not test source files
 tests/*.log
 tests/.cache/
 tests/__pycache__/
 tests/*.pyc
 tools/arxiv/scripts/data/*
-experiments/word2vec_evolution/embeddings/
 tools/arxiv/scripts/data/arxiv_collections/
+# Pipeline result files
+*_results_*.json
+tools/arxiv/pipelines/*_results_*.json
+tools/github/*_results_*.json
+arxiv_pipeline_v2_results_*.json
