--- a/experiments/word2vec_evolution/experiment_pipeline.yaml
+++ b/experiments/word2vec_evolution/experiment_pipeline.yaml
@@ -54,7 +54,7 @@ processing:
 storage:
   # ArangoDB settings
   arango:
-    host: 'localhost'
+    host: '192.168.1.69'
     port: 8529
     database: 'academy_store'
     collections:
