--- a/tools/arxiv/configs/acid_pipeline_phased.yaml
+++ b/tools/arxiv/configs/acid_pipeline_phased.yaml
@@ -31,9 +31,9 @@ phases:
   
   # Phase 2: EMBEDDING (GPU-only)
   embedding:
-    workers: 6  # Back to 8 - 4 per GPU with proper cleanup
+    workers: 8  # Target ~7-8GB VRAM usage per worker
     gpu_devices: [0, 1]  # Both A6000s
-    workers_per_gpu: 3  # 4 workers per GPU - should be stable with cleanup
+    workers_per_gpu: 4  # 4 workers per GPU - should be stable with cleanup
     
     # Jina v4 settings
     jina:
