--- a/tools/arxiv/configs/arxiv_search.yaml
+++ b/tools/arxiv/configs/arxiv_search.yaml
@@ -69,7 +69,7 @@ search:
 # Output configuration  
 output:
   # Base directory for output files
-  base_dir: tools/arxiv/scripts/data/arxiv_collections
+  base_dir: data/arxiv_collections
   
   # Output options
   write_monthly_lists: true    # Create per-month ID lists
