chore: Update .gitignore for temporary files
- Ignore cache directories
- Ignore checkpoint files
- Ignore IDE settings (.zed)
- Ignore scratch and staging directories

--- a/.gitignore
+++ b/.gitignore
@@ -388,3 +388,8 @@ arxiv_pipeline_v2_results_*.json
 tools/arxiv/REORGANIZATION_NOTICE.md
 tools/arxiv/SCRIPT_REORGANIZATION_ANALYSIS.md
 tools/arxiv/utils/SCRIPT_ANALYSIS.md
+graphsage_checkpoint.json
+cache/
+.zed/
+scratch/
+staging/
