fix: Correct CodeRabbit YAML parsing error
Change 'paths' to 'path' in path_instructions to match schema requirements

--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -55,7 +55,7 @@ reviews:
 
   # Path-specific instructions - apply to all paths
   path_instructions:
-    - paths: ["**/*"]
+    - path: "**/*"
       instructions: |
         # HADES — Conveyance Framework (Efficiency view default)
 
