fix: Exclude test files from CodeRabbit review path filters

--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -52,6 +52,7 @@ reviews:
     - "!**/*.pyo"
     - "!**/*.egg-info/**"
     - "!**/Acheron/**"         # Our deprecated code archive
+    - "!**/tests/**"             # Lock files (e.g. poetry.lock)
 
   # Path-specific instructions - apply to all paths
   path_instructions:
