chore: Move tests and dev-utils to local-only, reorganize setup scripts
- Added tests/ and dev-utils/ to .gitignore (local development only)
- Removed all test files from git tracking
- Removed all dev-utils scripts from git tracking
- Moved setup scripts to setup/ directory with proper path handling
- Fixed setup scripts to work from setup/ but install to project root

These directories contain local development and testing files that should not be tracked in the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -405,3 +405,5 @@ tools/arxiv/REORGANIZATION_NOTICE.md
 tools/arxiv/SCRIPT_REORGANIZATION_ANALYSIS.md
 tools/arxiv/utils/SCRIPT_ANALYSIS.md
 scratch/*
+dev-utils/*
+tests/
