feat: update dependencies and add grpcio packages
- Added grpcio and grpcio-tools version 1.75.0 to the project dependencies.
- Introduced h2 version 4.3.0 and hpack version 4.1.0 as new dependencies.
- Updated the protobuf dependency to include it in both main and dev groups.
- Removed the tools package from the installable packages list.
- Added an exclusion for a specific directory in the ruff configuration.

--- a/.env.example
+++ b/.env.example
@@ -4,12 +4,19 @@
 # =========================
 # Database Configuration
 # =========================
-# Using ARANGO_ prefix for compatibility with existing scripts
-ARANGO_HOST=192.168.1.69
-ARANGO_PORT=8529
+# ArangoDB Authentication
 ARANGO_USERNAME=root
 ARANGO_PASSWORD=your_password_here
-ARANGO_DATABASE=academy_store
+ARANGO_DATABASE=arxiv_repository
+
+# Socket Configuration (HADES uses Unix sockets only)
+ARANGO_USE_PROXIES=true
+ARANGO_RO_SOCKET=/run/hades/readonly/arangod.sock
+ARANGO_RW_SOCKET=/run/hades/readwrite/arangod.sock
+
+# Direct socket for development/debugging only
+# ARANGO_USE_PROXIES=false
+# ARANGO_SOCKET=/run/arangodb3/arangodb.sock
 
 # Alternative: Use HADES_ prefix (takes priority if both are set)
 # HADES_DB_HOST=192.168.1.69
