--- a/.coderabbit.yaml
+++ b/.coderabbit.yaml
@@ -52,7 +52,7 @@ reviews:
     - "!**/*.pyo"
     - "!**/*.egg-info/**"
     - "!**/Acheron/**"         # Our deprecated code archive
-    - "!**/tests/**"             # Exclude test sources from automated review
+    - "!**/tests/**"             # Exclude test files from automated review
 
   # Path-specific instructions - apply to all paths
   path_instructions:
@@ -109,7 +109,7 @@ reviews:
 
     - path: "core/embedders/**/*.py"
       instructions: |
-        Embedders must honour the standard EmbeddingConfig interface:
+        Embedders must honor the standard EmbeddingConfig interface:
         - Accept EmbeddingConfig or equivalent dict input.
         - Ensure fallback embeddings match EMBEDDING_DIM.
         - Preserve late chunking semantics (encode once, pool later).
